# azure-servicebus-async-example

./: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
app/: client.py  server.py
src/: exceptions.py
src/app/: main.py
src/config/: batch_config.py  blob_config.py  psql_config.py  redis_config.py  servicebus_config.py
src/dto/: __init__.py  batch_request.py  batch_response.py  request_message.py  response_message.py
src/model/: result.py  session.py
src/models/: request.py  request_result.py  result.py
src/repository/: base_repository.py  redis_repository.py  request_repository.py  request_result_repository.py  result_repository.py  session_repository.py  task_repository.py
src/service/: batch_service.py
src/utils/: myLogger.py  teams_alert.py
test/: client.py
